[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Assets/FloorTrap/FloorTrapNormal.gd" type="Script" id=1]
[ext_resource path="res://GFX/FloorTrap.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Activate"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31, 32 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("StaticBody2D/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="FloorTrapNormal" type="Area2D"]
collision_layer = 8
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 64
frame = 32

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Activate = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_FloorTrapNormal_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
